# mixery

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.c
examples/: layout.py  list.py  read.py  send_button.py  send_encoder.py
include/: layout.h  report.h  tusb_config.h  usb_descriptors.h  utils.h
src/: callbacks.c  handlers.c  layout.c  main.c  usb_descriptors.c  utils.c
